--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                     However, these patients' bmi's are for the most part near the median bmi for their age gropus.</div>
                 
             </div>
-            <div id = "sheet2" align=center >
+            <div id = "sheet2" style="display:none" align=center >
                 <div>This graph plots patients bmi values with respect to their age.
                     We can see that the red and blue points, denoting heart disease and hyptertension respectively, are more prevalent in older patients.
                     However, these patients' bmi's are for the most part near the median bmi for their age gropus.</div>
             </div>
-            <div id = "sheet3" align=center display:none></div>
-            <div id = "sheet4" align=center display:none></div>
+            <div id = "sheet3" style="display:none" align=center display:none></div>
+            <div id = "sheet4" style="display:none" align=center display:none></div>
         </div>
         <script src="https://d3js.org/d3.v7.js"></script>
         <!-- https://cdnjs.com/libraries/d3-annotation -->
