ui and chart changes

--- a/datavizfinal/index.html
+++ b/datavizfinal/index.html
@@ -1,15 +1,15 @@
 <html>
     <body>
-        <div align=center style="size: 30px">Tendencies Revealed Through Visualizing Health Data</div>
+        <div align=center style="size: 30px; margin-top: 20px; margin-bottom: 20px; font-size: 30px;">Tendencies Revealed Through Visualizing Health Data</div>
         <div align=center>
-            <div>
+            <div style="background-color: #7D80DA;" >
                 <button class="sheetswitch" id = "toSheet1" value="0">Blood Glucose Gap</button>
                 <!-- <button class="sheetswitch" id = "toSheet2" value="1">Prevalence of Disease Around the Gap</button> -->
                 <button id="showDiseases">Show Diseases</button>
                 <button id="hideDiseases">Hide Diseases</button>
 
             </div>
-            <div>
+            <div style="background-color: blue;">
                 <button class="sheetswitch" id = "toSheet3" value="2">Dangers of High Creatinine</button>
                 <button class="sheetswitch" id = "toSheet4" value="3">New Criteria for Disease Risk</button>
             </div>
@@ -20,7 +20,7 @@
         <div justify:center>
             <div padding-left:10></div>
             <div id = "sheet1" align=center>
-                <div>This graph plots patients' blood glucose levels with respect to their age.
+                <div style="margin-left:100px; margin-right:100px; margin-top: 50px; margin-bottom: 20px">This graph plots patients' blood glucose levels with respect to their age.
                     We can see that the red and blue points, denoting heart disease and hyptertension respectively, are more prevalent in older patients.
                     However, these patients' bmi's are for the most part near the median bmi for their age gropus.</div>
                 
