--- a/datavizfinal/index.html
+++ b/datavizfinal/index.html
@@ -44,8 +44,15 @@
                     However, these patients' bmi's are for the most part near the median bmi for their age gropus.</div>
             </div> -->
 
-            <div id = "sheet3" style="display:none" align=center display:none></div>
-            <div id = "sheet4" style="display:none" align=center display:none></div>
+            <div id = "sheet3" style="display:none" align=center display:none>
+                <p style="padding: 50px;">The ejection fraction is a measure of the amount of blood the left ventricle pumps with each contraction of the heart. As we can see, a majority of patients have below optimal ejection fraction levels. 
+                    As ejection fraction is not a commonly known measure, it is important for patients to learn ways to increase their ejection fraction levels, through diet, excercise, or other physician-recommended methods. 
+           </p>         
+        </div>
+           <div id = "sheet4" style="display:none" align=center display:none>
+            <p style="padding: 50px;">
+                Here we have the same data points from the previous graph. Feel free to play around with the axes and highlighted fields to discover new correlations in patients.
+           </p>     
         </div>
         <script src="https://d3js.org/d3.v7.js"></script>
         <!-- https://cdnjs.com/libraries/d3-annotation -->
