--- a/datavizfinal/index.html
+++ b/datavizfinal/index.html
@@ -51,7 +51,7 @@
         </div>
            <div id = "sheet4" style="display:none" align=center display:none>
             <p style="padding: 50px;">
-                Here we have the same data points from the previous graph. Feel free to play around with the axes and highlighted fields to discover new correlations in patients.
+                Here we have the same data points from the previous graph. Feel free to play around with the axes and highlighted fields to discover new correlations in patients!
            </p>     
         </div>
         <script src="https://d3js.org/d3.v7.js"></script>
