--- a/datavizfinal/index.html
+++ b/datavizfinal/index.html
@@ -2,18 +2,20 @@
     <body>
         <div align=center style="size: 30px; margin-top: 20px; margin-bottom: 20px; font-size: 30px;">Tendencies Revealed Through Visualizing Health Data</div>
         <div align=center>
+            <div style="background-color: black;"><button class="sheetswitch id="prevSheet" value="-1">Previous</button><button class="sheetswitch" id="nextSheet" value="1">Next</button></div>
             <div style="background-color: #7D80DA;" >
-                <button class="sheetswitch" id = "toSheet1" value="0">Blood Glucose Gap</button>
+                <!-- <button class="sheetswitch" id = "toSheet1" value="0">Blood Glucose Gap</button> -->
                 <!-- <button class="sheetswitch" id = "toSheet2" value="1">Prevalence of Disease Around the Gap</button> -->
                 <button id="showDiseases">Show Diseases</button>
                 <button id="hideDiseases">Hide Diseases</button>
 
             </div>
             <div style="background-color: rgb(76, 0, 255);">
-                <div>                <button class="sheetswitch" id = "toSheet3" value="2">Ejection Fraction Rates</button>
+                <div>                
+                    <!-- <button class="sheetswitch" id = "toSheet3" value="2">Ejection Fraction Rates</button> -->
                 </div>
                 
-                <button class="sheetswitch" id = "toSheet4" value="3">New Criteria for Disease Risk</button>
+                <!-- <button class="sheetswitch" id = "toSheet4" value="3">New Criteria for Disease Risk</button> -->
                 <div style="color:white;">
                     <tr>
                         <td >X Axis Field <select id = "xField" ></select></td>
