--- a/datavizfinal/index.html
+++ b/datavizfinal/index.html
@@ -53,7 +53,7 @@
         </div>
            <div id = "sheet4" style="display:none" align=center display:none>
             <p style="padding: 50px;">
-                Here we have the same data points from the previous graph. Feel free to play around with the axes and highlighted fields to discover new correlations in patients!
+                Here we have the same data points from the previous graph. First, try clicking "DEATH_EVENT" from the "Highlight Field" dropdown. You can see that most patients that died had the lowest ejection fractions. Feel free to play around with the axes and highlighted fields to discover new correlations in patients!
            </p>     
         </div>
         <script src="https://d3js.org/d3.v7.js"></script>
