--- a/datavizfinal/index.html
+++ b/datavizfinal/index.html
@@ -47,7 +47,9 @@
             </div> -->
 
             <div id = "sheet3" style="display:none" align=center display:none>
-                <p style="padding: 50px;">The ejection fraction is a measure of the amount of blood the left ventricle pumps with each contraction of the heart. As we can see, a majority of patients have below optimal ejection fraction levels. 
+                <p style="padding: 50px;">The ejection fraction is a measure of the amount of blood the left ventricle pumps with each
+                    contraction of the heart. The top line denotes the optimal threshold, and the lower line denotes cause for alarm. As
+                    we can see, a majority of patients have below optimal ejection fraction levels.
                     As ejection fraction is not a commonly known measure, it is important for patients to learn ways to increase their ejection fraction levels, through diet, excercise, or other physician-recommended methods. 
            </p>         
         </div>
