scene 1 text update

--- a/datavizfinal/index.html
+++ b/datavizfinal/index.html
@@ -36,7 +36,7 @@
             <div id = "sheet1" align=center>
                 <div style="margin-left:100px; margin-right:100px; margin-top: 50px; margin-bottom: 20px">Here we see patients' blood glucose (y axis) with respect to their age (x axis).
                     Do you see the large gap on the right side of the graph?
-                    This interesting gap has a huge concentration of diseases right on its edges. Click "Show Diseases" to see... 
+                    This interesting gap has a huge concentration of diseases right on its edges. Click "Show Diseases" (after the animation finishes) to see... 
                 </div>
                 
             </div>
