--- a/datavizfinal/index.html
+++ b/datavizfinal/index.html
@@ -34,9 +34,9 @@
         <div justify:center>
             <div padding-left:10></div>
             <div id = "sheet1" align=center>
-                <div style="margin-left:100px; margin-right:100px; margin-top: 50px; margin-bottom: 20px">Here we see patients' blood glucose (y axis) with respect to their age (x axis).
+                <div style="margin-left:100px; margin-right:100px; margin-top: 50px; margin-bottom: 20px">Visualizing health data can help us see previously-invisible trends. Here we see patients' blood glucose (y axis) with respect to their age (x axis).
                     Do you see the large gap on the right side of the graph?
-                    This interesting gap has a huge concentration of diseases right on its edges. Click "Show Diseases" (after the animation finishes) to see... 
+                    Interestingly, right on the edges of this gap, we can see a concentration of diseases. Click "Show Diseases" (after the animation finishes) to see... 
                 </div>
                 
             </div>
