--- a/datavizfinal/index.html
+++ b/datavizfinal/index.html
@@ -10,7 +10,7 @@
                 <button id="hideDiseases">Hide Diseases</button>
 
             </div>
-            <div style="background-color: rgb(76, 0, 255);">
+            <div style="background-color:#7D80DA">
                 <div>                
                     <!-- <button class="sheetswitch" id = "toSheet3" value="2">Ejection Fraction Rates</button> -->
                 </div>
